Eliminado ROLE_ de los roles